adding Anti-Bonus-Hunter satelite
